# CvTask_linux

./: CMakeLists.txt  index.html  main.cpp  main.js  package-lock.json  package.json  renderer.js  styles.css
